test_case/rust-lang_rust/49943_385433662_1.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/generator/borrowing.rs","byte_start":651,"byte_end":664,"line_start":18,"line_end":18,"column_start":18,"column_end":31,"is_primary":true,"text":[{"text":"        unsafe { (|| yield &a).resume() }","highlight_start":18,"highlight_end":31}],"label":"borrowed value does not live long enough","suggested_replacement":null,"expansion":null},{"file_name":"/checkout/src/test/ui/generator/borrowing.rs","byte_start":730,"byte_end":731,"line_start":20,"line_end":20,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    };","highlight_start":5,"highlight_end":6}],"label":"borrowed value only lives until here","suggested_replacement":null,"expansion":null},{"file_name":"/checkout/src/test/ui/generator/borrowing.rs","byte_start":651,"byte_end":664,"line_start":18,"line_end":18,"column_start":18,"column_end":31,"is_primary":true,"text":[{"text":"        unsafe { (|| yield &a).resume() }","highlight_start":18,"highlight_end":31}],"label":"borrow may end up in a temporary, created here","suggested_replacement":null,"expansion":null},{"file_name":"/checkout/src/test/ui/generator/borrowing.rs","byte_start":731,"byte_end":732,"line_start":20,"line_end":20,"column_start":6,"column_end":7,"is_primary":false,"text":[{"text":"    };","highlight_start":6,"highlight_end":7}],"label":"temporary later dropped here, potentially using the reference","suggested_replacement":null,"expansion":null}],"children":[],"rendered":"error[E0597]: `a` does not live long enough\n  --> /checkout/src/test/ui/generator/borrowing.rs:18:18\n   |\nLL |         unsafe { (|| yield &a).resume() }\n   |                  ^^^^^^^^^^^^^\n   |                  |\n   |                  borrowed value does not live long enough\n   |                  borrow may end up in a temporary, created here\nLL |         //~^ ERROR: `a` does not live long enough\nLL |     };\n   |     -- temporary later dropped here, potentially using the reference\n   |     |\n   |     borrowed value only lives until here\n\n"}
[00:47:47] {"message":"`a` does not live long enough","code":{"code":"E0597","explanation":"\nThis error occurs because a borrow was made inside a variable which has a\ngreater lifetime than the borrowed one.\n\nExample of erroneous code:\n\n